# Chat-Agent

./: README.md
chat-agent/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
chat-agent/app/: main.py
chat-agent/app/agent/: builder.py
chat-agent/app/api/: __init__.py  routes_chat.py
chat-agent/app/core/: __init__.py  logging.py  settings.py
chat-agent/app/tests/: test_chat_endpoint.py
chat-agent/app/utils/: __init__.py  runtime.py
